--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2 class="text-primary mb-4" id="typewriter"></h2>
       </div>
       <div class="hero-inferior">
-        <img class="hero-inferior-imagen img-fluid" src="imagenes\hero-inferior.png" alt="Monitor, laptop y logos de HTML, CSS, JavaScript y React.">
+        <img class="hero-inferior-imagen img-fluid" src="imagenes\hero-inferior.png" alt="Monitor, laptop y logos">
       </div>
     </section>
 
@@ -215,7 +215,7 @@
               <div class="overlay">
                 <p>Technovation Climate Curriculum</p>
                 <div class="iconos-contenedor">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://technovationchallenge.org/curriculum/climate-sdg13/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
